Final Deliverables/Final Code/kubernetes/flask_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pda

spec:
  replicas: 3
  selector:
    matchLabels:
      app: pda
  template:
    metadata:
      labels:
        app: pda

    spec:
      containers:
        - name: pda-container
          image: pda-testing
          imagePullPolicy: Never
          ports:
             - containerPort: 5000
               protocol: TCP
