Final Deliverables/Final Code/kubernetes/flask_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pda-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  # ingressClassName: nginx
  rules:
    - http:
        paths:
          - backend:
              service:
                name: flask-app-service
                port:
                  number: 5000
            path: /
            pathType: Prefix
